# Drone-Fieldtest

./: .gitignore  4GB_SOLUTION_FINAL_STATUS.md  AUTOSTART_TEST_REPORT.md  BUG_03_STOPPING_STATE_TIMER_FIX.md  BUG_06_BATTERY_PERCENTAGE_FILTER_FIX.md  CHANGELOG.md  CMakeLists.txt  CRITICAL_FIX_v1.5.4d.md  CRITICAL_RECALIBRATION_REQUIRED.md  DUAL_INSTANCE_FINAL_ASSESSMENT.md  EXTERNAL_FILES_DOCUMENTATION.md  NETWORK_SAFETY_SOLUTION.md  NVENC_INVESTIGATION_RESULTS.md  OBJECT_DETECTION_ARCHITECTURE.cpp  ORGANIZED_EXTRACTION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OVERVIEW_NOV2024.md  PROJECT_STATUS_FINAL.md  Project_Architecture  QUICK_COMMANDS.txt  QUICK_REFERENCE.txt  README.md  RELEASE_v1.3_STABLE.md  SEAMLESS_SEGMENTATION_RESULTS.md  STREAMING_DEPLOYMENT_GUIDE.md  SVO_EXTRACTION_SUCCESS.md  TEST_CHECKLIST_v1.5.4.md  TEST_QUICK_COMMANDS.sh  THRESHOLD_14.6V_CHANGE_v1.5.4.md  ZED_Diagnostic_ResultsOct18.json  ZED_LARGE_FILE_FIXES.cpp  analyze_corruption.sh  calibrate_ina219.py  calibrate_ina219_3point.py  cleanup_ap.sh  diagnose_i2c_bus0  diagnose_ina219.py  drone_aliases.sh  drone_start.sh  i2c_lcd_tester  (+14 more)
.github/: copilot-instructions.md
apps/data_collector/: CMakeLists.txt  autostart.sh  main.cpp
apps/drone_web_controller/: CMakeLists.txt  autostart.sh  drone_web_controller.cpp  drone_web_controller.h  main.cpp
apps/live_streamer/: CMakeLists.txt  main.cpp
apps/performance_test/: CMakeLists.txt  main.cpp
apps/smart_recorder/: CMakeLists.txt  main.cpp
apps/zed_cli_recorder/: CMakeLists.txt  main.cpp
common/hardware/battery/: CMakeLists.txt  battery_monitor.cpp  battery_monitor.h
common/hardware/lcd_display/: CMakeLists.txt  CMakeLists.txt.save  lcd_handler.cpp  lcd_handler.h  lcd_i2c.cpp  lcd_i2c.h
common/hardware/zed_camera/: CMakeLists.txt  depth_data_writer.cpp  depth_data_writer.h  raw_frame_recorder.cpp  raw_frame_recorder.h  zed_recorder.cpp  zed_recorder.h
common/networking/: CMakeLists.txt  safe_hotspot_manager.cpp  safe_hotspot_manager.h
common/storage/: CMakeLists.txt  storage.cpp  storage.h
common/streaming/: CMakeLists.txt  zed_streamer.cpp  zed_streamer.h
common/utils/: CMakeLists.txt
docs/: ALL_BUGS_FIXED_SUMMARY_v1.5.4.md  ARCHITECTURE_OVERVIEW.md  AUTOSTART_CLEANUP_NOV18.md  BATTERY_CALIBRATION_COMPARISON.md  BATTERY_MONITORING_v1.5.5.md  BEST_PRACTICE_COMPLETION_FLAGS.md  BUGFIX_1_LCD_BOOT_v1.5.4.md  BUGFIX_5_LIVESTREAM_CACHE_v1.5.4.md  CAMERA_REINIT_SAFETY_v1.4.6.md  CLEANUP_PLAN.md  COMPLETE_SESSION_SUMMARY.md  CRITICAL_LEARNINGS_v1.3.md  DOCUMENTATION_GUIDE.md  FEEDBACK_FIXES_v1.5.4a.md  FINAL_FIXES_v1.5.4c.md  GUI_CLEANUP_v1.4.7.md  GUI_RESTRUCTURING_v1.4.md  GUI_TAB_IMPLEMENTATION_v1.4.md  I2C_BUS0_HARDWARE_ISSUE.md  I2C_GPIO_PIN_MAPPING.md  KEY_LEARNINGS.md  LCD_BOOT_FINAL_FIX_v1.5.4e.md  LCD_SHUTDOWN_MESSAGES_v1.5.4.md  LIVESTREAM_BANDWIDTH_MONITORING.md  LIVESTREAM_PERFORMANCE_v1.4.5.md  MAIN_LOOP_RECORDING_FIX_v1.5.4.md  NETWORK_MONITORING_GUIDE.md  NetworkManager_WiFi_Integration.md  PERFORMANCE_INVESTIGATION_RESULTS.md  PRE_RELEASE_v1.3_STABLE.md  Performance_Test_Mode.md  QUICK_START.md  SESSION_SUMMARY_v1.5.4b.md  SHUTDOWN_DEADLOCK_FIX_v1.5.4.md  SHUTDOWN_FIXES_SUMMARY_v1.5.4.md  SHUTDOWN_SEGFAULT_FIX_v1.4.3.md  SHUTTER_SPEED_CONVERSION.cpp  SHUTTER_SPEED_UI_v1.3.md  SHUTTER_SPEED_v1.3_IMPROVEMENTS.md  STATE_TRANSITION_FIX_v1.5.4.md  (+3 more)
docs/archive/bugfixes/: BUGFIXES_v1.4.1.md  BUGFIX_8_MAH_RUNTIME_v1.5.4.md  BUG_02_LCD_SHUTDOWN_FIX.md  BUG_04_REINITIALIZING_STATE_FIX.md  BUG_FIXING_SESSION_FINAL_SUMMARY.md  BUG_FIXING_SESSION_SUMMARY.md  LCD_BOOT_FIX_SUMMARY_v1.5.4e.md  LCD_BOOT_TIMING_FIX_v1.5.4f.md  LCD_FINAL_FIX_v1.3.3.md  LCD_FINAL_v1.3.2.md  SHUTDOWN_BEHAVIOR_FIX_v1.5.4.md  SHUTTER_SPEED_FIX_v1.4.9.md  WEB_DISCONNECT_FIX_v1.3.4.md  WEB_SERVER_BLOCKING_FIX_v1.5.4d.md
docs/archive/features/: AI_Strategy_Recommendations.md  Autologin_Configuration.md  COMPLETION_FLAGS_IMPLEMENTATION.md  DEPTH_MODE_AUTO_MANAGEMENT_v1.5.2.md  FIELD_TEST_IMPROVEMENTS_v1.5.0.md  GAIN_SNAPSHOT_IMPLEMENTATION.md  GRACEFUL_RECORDING_SHUTDOWN.md  GUI_Performance_Mode_Integration.md  GUI_UPDATES_v1.4.4.md  TIMER_STOP_UNIFICATION_v1.5.2.md
docs/archive/hardware/: BATTERY_CALIBRATION_COMPARISON.md  BATTERY_MONITORING_v1.5.5.md  HARDCODED_CALIBRATION_v1.5.4.md  I2C_BUS0_HARDWARE_ISSUE.md  I2C_GPIO_PIN_MAPPING.md  I2C_MULTI_DEVICE_NO_MULTIPLEXER.md  I2C_PINOUT_REFERENCE.md  INA219_2SEGMENT_UPGRADE_v1.5.4.md  INA219_KALIBRIERUNG_3PUNKT.md  INA219_SETUP_GUIDE.md  LCD_BOOT_KNOWN_LIMITATION.md  LCD_DISPLAY_MESSAGES_v1.3.md  LCD_HARDWARE_ISSUE.md  LCD_IMPROVEMENTS_v1.3.1.md  LCD_SHUTDOWN_MESSAGES_v1.5.4.md  VOLTAGE_DROP_UNDER_LOAD_v1.5.4.md
docs/archive/investigations/: GAP_REDUCTION_ANALYSIS.md  LIVE_STREAMING_ANALYSIS.md  PERFORMANCE_ANALYSIS_PLAN.md  (+2 more)
docs/guides/: DEVELOPER_GUIDE.md  USER_GUIDE.md
docs/releases/: GIT_COMMIT_v1.5.2.md  RELEASE_v1.3_STABLE.md  RELEASE_v1.5.2_STABLE.md  RELEASE_v1.5.3_STABLE.md  RELEASE_v1.5.4_STABLE.md
scripts/: autostart_control.sh  autostart_service_wrapper.sh  build.sh  disable_power_management.sh  early_lcd_feedback.sh  extract_svo_images.sh  field_test_analyzer.py  force_2ghz_wifi.sh  install_service.sh  long_mission_10min.sh  performance_analyzer.py  quick_performance_test.sh  restore_network.sh  segmented_large_recording.sh  segmented_recording.sh  start_drone.sh  stop_drone.sh  test_performance_mode.sh  wifi_disconnect.sh  wifi_recovery.sh  wifi_setup.sh
systemd/: drone-recorder.service  drone-web-controller.service
tests/camera/: test_camera_only.py  test_zed_60fps.py  test_zed_cli_4min.sh  test_zed_grab_only.py  test_zed_ssd.sh
tests/hardware/: battery_monitor.py  i2c_lcd_tester.cpp  i2c_scanner  i2c_scanner.cpp  lcd_backlight_test.cpp  scan_ina219.py  simple_lcd_test  simple_lcd_test.cpp  test_2segment_calibration.cpp  test_ina219.py  test_lcd  test_lcd.cpp  test_parallel_connection.sh
tests/integration/: test_ntfs_usb.sh
tools/: CMakeLists.txt  calibrate_battery_monitor.cpp  depth_viewer.cpp  extract_svo_images.sh  lcd_display_tool.cpp  svo_extractor.cpp  svo_image_extractor.cpp
(+42 files in other folders)
